syntax = "proto3";

package api.helloworld.v1;

import "google/api/annotations.proto";

option go_package = "helloworld/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service Student {
	rpc CreateStudent (CreateStudentRequest) returns (CreateStudentReply);
	rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentReply);
	rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentReply);
	rpc GetStudent (GetStudentRequest) returns (GetStudentReply);
	rpc ListStudent (ListStudentRequest) returns (ListStudentReply);
	rpc HelloStudent (HelloStudentRequest) returns (HelloStudentReply){
		option (google.api.http) = {
			get:"/hello/{name}",
			additional_bindings {
				post:"/hello/{id}/sayhello/{name}",
				body:"*",
			}
		};
	}
}

message CreateStudentRequest {}
message CreateStudentReply {}

message UpdateStudentRequest {}
message UpdateStudentReply {}

message DeleteStudentRequest {}
message DeleteStudentReply {}

message GetStudentRequest {}
message GetStudentReply {}

message ListStudentRequest {}
message ListStudentReply {}

message HelloStudentRequest{
	string name = 1;
	int64 id = 2;
}
message HelloStudentReply{
	string name = 1;
	int64 id = 2;
	string message = 3;
}